# fatso

./: README  TODO  configure.ac
docs/: specs.txt
src/: Makefile.am  ast.cpp  ast.h  ir.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h
